--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-redis": "0.0.16",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
@@ -27,6 +28,7 @@
     "@mikro-orm/migrations": "^4.3.4",
     "@mikro-orm/postgresql": "^4.3.4",
     "apollo-server-express": "^2.19.2",
+    "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
