--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
+    "package.json": "^2.0.1",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
     "type-graphql": "^1.1.1"
