--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,9 @@
     "formik": "^2.2.6",
     "framer-motion": "^2.9.4",
     "graphql": "^15.4.0",
+    "js-cookie": "^2.2.1",
     "next": "latest",
+    "package.json": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -26,6 +28,7 @@
     "@graphql-codegen/typescript": "^1.20.0",
     "@graphql-codegen/typescript-operations": "^1.17.13",
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.21",
     "typescript": "^4.1.3"
   }
