--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.21",
     "@types/redis": "^2.8.28",
+    "@types/socket.io": "^2.1.12",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
@@ -36,6 +37,7 @@
     "package.json": "^2.0.1",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
+    "socket.io": "^3.1.0",
     "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
