--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,8 @@
     "next": "latest",
     "package.json": "^2.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "socket.io-client": "^3.1.0"
   },
   "license": "MIT",
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.21",
+    "@types/socket.io-client": "^1.4.35",
     "typescript": "^4.1.3"
   }
 }
