--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "package.json": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "socket.io-client": "^3.1.0"
+    "socket.io-client": "^3.1.0",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "license": "MIT",
   "devDependencies": {
