--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@mikro-orm/migrations": "^4.3.4",
     "@mikro-orm/postgresql": "^4.3.4",
     "apollo-server-express": "^2.19.2",
+    "class-validator": "^0.13.1",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
