--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "socket.io-client": "^3.1.0",
-    "subscriptions-transport-ws": "^0.9.18"
+    "subscriptions-transport-ws": "^0.9.18",
+    "ws": "^7.4.2"
   },
   "license": "MIT",
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.21",
     "@types/socket.io-client": "^1.4.35",
+    "@types/ws": "^7.4.0",
     "typescript": "^4.1.3"
   }
 }
