--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
-    "create:migration": "mikro-orm migration:create"
+    "create:migration": "mikro-orm migration:create",
+    "db:setup": "ts-node ./src/test-utils/testConnection.ts",
+    "test": "yarn db:setup && jest"
   },
   "author": "",
   "license": "ISC",
@@ -16,12 +18,19 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/jest": "^26.0.21",
     "@types/node": "^14.14.21",
     "@types/redis": "^2.8.28",
     "@types/socket.io": "^2.1.12",
+    "apollo-server": "^2.21.2",
+    "apollo-server-integration-testing": "^2.3.1",
+    "apollo-server-testing": "^2.21.2",
+    "graphql-tag": "^2.11.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "@mikro-orm/cli": "^4.3.4",
